--- a/KumAccess/appsettings.Development.json
+++ b/KumAccess/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-H36CP9C;Database=KumAccess;Trusted_Connection=True;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
